--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 :root{
   --font: "Inter", sans-serif;
   --primary-col: #161618;
-  --secondary-col: hsl(240, 4%, 9%);
+  --secondary-col: #161618;
   --text-col: #fff; 
 
   --primary-font-size: 3rem;
@@ -111,7 +111,7 @@
   flex: 1;
   padding: 35px;
   background-color: var(--primary-col);
-  background-image: url(../public//assets/bg.jpg);
+  background-image: url(../public//assets/01.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -134,8 +134,32 @@
 
 
 
-@media (min-width: 600px) {
-  body {
-      font-size: 28px; /* Increase font size for tablets */
+/* Media query for tablets (max-width: 1024px) */
+@media (max-width: 1024px) {
+  .weatherApp{
+    min-height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center ;
+    background-color: var(--primary-col);
+    background-image: url(../public//assets/01.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  
+  .card{
+    width: 360px;
+    min-width: 60%;
+    box-sizing: border-box;
+  }
+  
+  .time-window{
+    flex: none;
+    background-image: none;
+    box-sizing: border-box;
+    align-items: center;
+    width: 360px;
+    min-width: 60%;
   }
 }
