--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,7 @@
 /* Media query for tablets (max-width: 1024px) */
 @media (max-width: 1024px) {
   .weatherApp{
+    height: auto;
     min-height: 100vh;
     flex-direction: column;
     align-items: center;
@@ -161,5 +162,29 @@
     align-items: center;
     width: 360px;
     min-width: 60%;
+  }
+}
+
+/* Media query for mobile devices (max-width: 768px and max-width: 480px) */
+@media (max-width: 768px) {
+ .card{
+    background-color: var(--primary-col);
+    width: 100wh;
+    min-width: 100%;
+    height: auto;
+  }
+
+  .time-window{
+    width: 100wh;
+    min-width: 100%;
+    height: auto;
+  }
+
+  @media (max-width: 480px) {
+    .weatherApp{
+      justify-content: start ;
+      background-color: var(--primary-col);
+      background-image:none;
+    }
   }
 }
