--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: var(--tertiary-col);
 }
 
 .weather-info > .temprature{
@@ -107,8 +108,9 @@
 
 .weather-title > .weather-text{
   margin:0;
-  font-size: var(--secondary-font-size);
-  font-weight: var(--secondary-font-weight);
+  font-size: var(--tertiary-font-size);
+  font-weight: var(--primary-font-weight);
+  color: #bf4b43;
 }
 
 /*MoreInfo Styles*/
