Updated Search Input

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   place-items: center;
   box-sizing: border-box;
 
   background-color: var(--primary-col);
-    background-image: url(../public//assets/bg.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(../public//assets/bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
