--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,7 @@
 @tailwind utilities;
 
 body {
-  background-image: url("../src/assets/01.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-color: #a594f9;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
